# warrant

./: LICENSE  Makefile  README.md  SESSION.md  SKILL.md
.warrant/: api-config.example.json  config.example.json
agent/: pyproject.toml
agent/agent/: plan.py  planops.py  planstore.py
librarian/: pyproject.toml
librarian/librarian/: cli.py  corpus.py  edges.py  embedding.py  extract.py  indexer.py  llm.py  models.py  query.py  store.py
librarian/tests/: fakes.py  test_cli.py  test_corpus.py  test_edges.py  test_embedding.py  test_extract.py  test_indexer.py  test_integration.py  test_llm.py  test_models.py  test_query.py  test_smoke.py  test_store.py
librarian/tests/fixtures/9999999999999-fixture-book/: 01-the-first-chapter.md  book.json
loop/: pyproject.toml
loop/loop/: __init__.py  citationreport.py  materializer.py  models.py  runner.py  runstore.py  verifier_materializer.py  worktree.py
loop/loop/api/: __main__.py  factory.py  invokers.py  sandbox.py
loop/loop/phases/: execute.py  orient.py  plan.py  retrieve.py  verify.py
loop/loop/skill/: __main__.py  factory.py  invokers.py
loop/tests/: fakes.py  test_api_factory.py  test_api_init.py  test_api_invokers.py  test_api_materializer.py  test_citationreport.py  test_execute.py  test_factory.py  test_invokers.py  test_main.py  test_materializer.py  test_models.py  test_orient.py  test_plan.py  test_retrieve.py  test_runner.py  test_runstore.py  test_smoke.py  test_verifier_materializer.py  test_verify.py  test_worktree.py
sample-library/: build_index.py  demo-config.json  principles.json
(+36 files in other folders)
