[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "librarian"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
librarian = "librarian.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
