[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loop"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "agent",
    "librarian",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "anthropic>=0.25.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
